--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
+    "json-server": "^0.12.0",
     "mint-ui": "^2.2.9",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.4",
