--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "xhw",
+  "name": "day02",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "qtq <752947294@qq.com>",
+  "author": "",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
-    "json-server": "^0.12.0",
     "mint-ui": "^2.2.9",
+    "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.0"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -37,19 +37,20 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
+    "json-server": "^0.12.1",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
     "rimraf": "^2.6.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "portfinder": "^1.0.13",
     "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-merge": "^4.1.0"
